# personal-advocacy-toolkit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  advocacy.toml.example  pyproject.toml  wrangler.jsonc
.claude/plans/advocacy-toolkit/: README.md  phase-0-scaffolding.md  phase-1-port-tools.md  phase-2-synthetic-case.md  phase-3-new-tools.md  phase-4-skills-letters.md  phase-5-docs.md
.claude/skills/authorities-finder/: SKILL.md
.claude/skills/authorities-reconcile/: SKILL.md
.claude/skills/authorities-web-research/: SKILL.md
.claude/skills/case-intake/: SKILL.md
.claude/skills/document-extraction/: SKILL.md
.claude/skills/docx-comment-roundtrip/: SKILL.md
.claude/skills/going-public/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_authority_data.md  new_jurisdiction_playbook.md
.github/workflows/: ci.yml
ci/: banned-terms.txt  example-subs.yaml
data/: authorities.yaml  deadlines.yaml  kind_inference.yaml  pipeline_dispatch.yaml  reference_sources.yaml  situation_types.yaml
docs/: getting-started.md  who-this-is-for.md
docs/byoa/: README.md  claude-code.md  no-shell-surfaces.md  other-shell-agents.md
docs/concepts/: authorities-and-regulators.md  case-map-app.md  chain-of-custody.md  correspondence-manifest-schema.md  evidence-integrity.md  pii-and-publication.md  tone-modes.md  trusted-sources.md
docs/playbooks/: consumer-scam.md  debt-collector.md  employment-retaliation.md  harassment-cyberbullying.md  insurance-dispute.md  landlord-tenant.md  medical-billing.md
docs/tutorials/: 01-setting-up-your-case.md  02-ingesting-evidence.md  03-understanding-the-situation.md  04-building-a-packet.md  05-going-public-safely.md  06-case-map-app.md
examples/maryland-mustang/: .claude-commenters.yaml  .evidence-manifest.sha256  .references-manifest.sha256  CLAUDE.md  README.md  WALKTHROUGH.md  case-facts.yaml  entities.yaml  events.yaml  evidence-manifest.yaml
examples/mustang-in-maryland/: .claude-commenters.yaml  .evidence-manifest.sha256  CLAUDE.md  README.md  WALKTHROUGH.md  case-facts.yaml  entities.yaml  events.yaml  evidence-manifest.yaml
scripts/: _config.py  _file_metadata.py  demo.py  evidence_hash.py  init_case.py  provenance.py  provenance_bundle.py  provenance_handlers.py  provenance_snapshot.py
scripts/app/: __init__.py  __main__.py  _aggregate.py  _loaders.py  _markdown.py  _schema.py  server.py  validate.py
scripts/case_map_build/: __init__.py  __main__.py  _cache.py  _llm.py  _widgets.py
scripts/ci/: local_postchecks.sh
scripts/extraction/: __init__.py  __main__.py  cascade.py  consent.py  garble.py  overrides.py  recipe.py  reconcile.py  result.py  writer.py
scripts/hooks/: dev_pre_push.sh  install_dev_hooks.sh  install_hooks.sh  pre_commit.py
scripts/ingest/: __init__.py  _manifest.py  _pdf.py  email_eml_to_json.py  email_json_to_txt.py  html_to_text.py  mbox_split.py  medical_eob.py  pdf_to_text.py  screenshot_capture.py  sms_export.py  voicemail_meta.py
scripts/intake/: __init__.py  _common.py  authorities_lookup.py  authorities_reconcile.py  deadline_calc.py  situation_classify.py
scripts/letters/: __init__.py  draft.py
scripts/manifest/: __init__.py  correspondence_manifest.py  evidence_manifest.py
scripts/packet/: __init__.py  _convert.py  _hash.py  _manifest.py  _pdfutil.py  appendix_cover.py  build.py  build_pdf.sh  compile_reference.py  packet_manifest_validate.py
scripts/publish/: __init__.py  _citation.py  _substitutions.py  docx_apply_replies.py  docx_catalog.py  docx_comment_roundtrip.py  docx_edit_ops.py  docx_metadata_scrub.py  docx_pack.py  docx_unpack.py  exif_scrub.py  history_sanitizer.py  pdf_redact.py  pii_scrub.py
scripts/references/: __init__.py  _allowlist.py  _manifest.py  assess.py  compare.py  extract.py  fetch.py  ingest.py  list.py
scripts/status/: __init__.py  case_dashboard.py
scripts/synthetic_case/: __init__.py  _reportlab_theme.py  regenerate.py
skills/authorities-finder/: SKILL.md
skills/authorities-reconcile/: SKILL.md
skills/case-intake/: SKILL.md
skills/docx-comment-roundtrip/: README.md  SKILL.md
skills/evidence-intake/: SKILL.md
skills/going-public/: SKILL.md
skills/packet-builder/: SKILL.md
skills/pii-scrubber/: SKILL.md
skills/provenance/: README.md  SKILL.md
skills/situation-triage/: SKILL.md
skills/tone-modes/: SKILL.md
templates/: CLAUDE.md.template  entities.schema.yaml  events.schema.yaml
templates/letter-templates/: cease-desist.docx.j2  demand.docx.j2  foia.docx.j2  preservation.docx.j2  withdrawal.docx.j2
templates/packet-manifests/: README.md  example-generic-dispute.yaml  schema.yaml
tests/: conftest.py  test_authorities_lookup.py  test_authorities_reconcile.py  test_case_dashboard.py  test_case_map_aggregate.py  test_case_map_build.py  test_case_map_schema.py  test_case_map_server.py  test_correspondence_pipeline.py  test_deadline_calc.py  test_docx_apply_replies.py  test_docx_catalog.py  test_docx_comment_roundtrip.py  test_docx_edit_ops.py  test_docx_metadata_scrub.py  test_docx_skill_integration.py  test_docx_unpack_pack.py  test_evidence_hash.py  test_evidence_manifest.py  test_exif_scrub.py  test_file_metadata.py  test_history_sanitizer.py  test_html_to_text.py  test_init_case_references.py  test_intake_ca_insurance.py  test_letters_draft.py  test_medical_eob.py  test_packet_build.py  test_packet_manifest.py  test_packet_manifest_validate.py  test_packet_reference.py  test_pdf_redact.py  test_pdf_to_text.py  test_pii_scrub.py  test_pre_commit_hook.py  test_provenance.py  test_provenance_snapshot.py  test_references_allowlist.py  test_references_assess.py  test_references_compare.py  (+9 more)
tests/extraction/: conftest.py  test_benchmark.py  test_cascade.py  test_cli.py  test_consent.py  test_extractors_tier0.py  test_garble.py  test_overrides.py  test_privacy_gate.py  test_reconcile.py  test_vlm_registry.py  test_writer_and_recipe.py
tests/fixtures/: call_log_sample.csv  eob_sample.csv  sample_email.html  sms_android_sample.xml
web/: index.html
(+214 files in other folders)
